...
                        android:text="@string/my_word_book_format_guide_button"
                        app:icon="@drawable/ic_help_outline_24" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_slots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                tools:itemCount="3"
                tools:listitem="@layout/item_my_word_book_slot" />

...
